--- a/ufb.web/src/main/webapp/index.html
+++ b/ufb.web/src/main/webapp/index.html
@@ -10,6 +10,7 @@
     <script type="text/javascript" src="public/js/libs/html5.js"></script>
     <![endif]-->
     <script type="text/javascript" src="static/public/js/jquery.js"></script>
+    <script type="text/javascript" src="static/public/js/plug.js"></script>
 </head>
 <body>
 <div class="loginPage container" id="index">
