--- a/ufb.web/src/main/webapp/index.html
+++ b/ufb.web/src/main/webapp/index.html
@@ -10,7 +10,6 @@
     <script type="text/javascript" src="public/js/libs/html5.js"></script>
     <![endif]-->
     <script type="text/javascript" src="static/public/js/jquery.js"></script>
-    <script type="text/javascript" src="static/public/js/plug.js"></script>
 </head>
 <body>
 <div class="loginPage container" id="index">
@@ -22,7 +21,7 @@
 			<div class="container">
 				  <div class="b1">
 				  	<a href="corp/account/index.htm" class="active">机构版</a>
-				  	<a href="family/index.htm">家庭版</a>
+				  	<a href="javascript:;">家庭版</a>
 				  </div>
 			</div>
 		</div>
@@ -36,7 +35,7 @@
                  </div>
                 <div class="IndividualUser">
                      <div class="cartoonBg02"></div>
-                     <a href="family/index.htm"><img src="static/public/images/img_24.png"></a>
+                     <a href="javascript:;"><img src="static/public/images/img_24.png"></a>
                 </div>
             </div>
         </div>
