机构版注册、账户验证

--- a/ufb.web/src/main/webapp/index.html
+++ b/ufb.web/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 		<div class="topNav">
 			<div class="container">
 				  <div class="b1">
-				  	<a href="corp/account/index.htm" class="active">机构版</a>
+				  	<a href="corp/index.htm" class="active">机构版</a>
 				  	<a href="javascript:;">家庭版</a>
 				  </div>
 			</div>
@@ -31,7 +31,7 @@
             <div class="loginBg">
                  <div class="InstitutionalUser">
                      <div class="cartoonBg01" style="opacity:0;"></div>
-                     <a href="corp/account/index.htm"><img src="static/public/images/img_23.png"></a>
+                     <a href="corp/index.htm"><img src="static/public/images/img_23.png"></a>
                  </div>
                 <div class="IndividualUser">
                      <div class="cartoonBg02"></div>
